Fixed some paragraph space issues.

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.48 2009/10/05 15:52:09 ith Exp $
+% $Id: dbi.tex,v 1.49 2009/10/06 10:57:56 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.48 2009/10/05 15:52:09 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.49 2009/10/06 10:57:56 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -127,7 +127,7 @@ in Figure~\ref{fig:throat-geom}.
 % 
 \begin{figure}
  \centering
- \includegraphics{./dbi/graphs/throat-geom.pdf}
+ \includegraphics[width=\textwidth]{./dbi/graphs/throat-geom.pdf}
  % throat-geom.pdf: 432x288 pixel, 72dpi, 15.24x10.16 cm, bb=0 0 432 288
  \caption[Warped Throat Geometry]{Geometry of the warped throat. The radial
 coordinate $\rho$ is measured from the tip of the throat to $\rho_{UV}$ at the join
