--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.47 2009/09/29 10:50:25 ith Exp $
+% $Id: multibrane.tex,v 1.48 2009/10/06 10:57:55 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.47 2009/09/29 10:50:25 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.48 2009/10/06 10:57:55 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -921,7 +921,7 @@ implies that for all $n$, these terms can be expressed in the form
 P = -2T_3 \left\{ \frac{h^4 \left[ 1+2(n-1)^2Y
 - [ 2+3(n-1)^2Y] (n-1)^2\XR  \right]}{\sqrt{1+(n-1)^2Y}
 \sqrt{1-(n-1)^2\XR}} 
- \right\} -n T_3 \left( V -h^4 \right) \,.
+ \right\} -n T_3 \left( V -h^4 \right).
 \end{equation}
 % 
 
