Added macros for \A-\G and changed to use them instead of normal A term etc

--- a/ihmacros.sty
+++ b/ihmacros.sty
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % 
 % ihmacros.sty - Ian Huston
-% $Id: ihmacros.sty,v 1.17 2009/10/05 22:10:13 ith Exp $
+% $Id: ihmacros.sty,v 1.18 2009/10/06 16:27:47 ith Exp $
 % % % % % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihmacros}
@@ -16,11 +16,19 @@
 % Maths letters
 \renewcommand{\H}{\ensuremath{\mathcal{H}}}
 \newcommand{\Mfact}{\mathcal{M}}
-\newcommand{\Ffact}{\mathcal{F}}
+% \newcommand{\Ffact}{\mathcal{F}}
 \newcommand{\Tfact}{\mathcal{T}}
 \newcommand{\Kfact}{\mathcal{K}}
 \newcommand{\R}{\mathcal{R}}
-\newcommand{\A}{\mathcal{A}}
+% Letters for A-G terms
+\newcommand{\A}{\ensuremath{\mathcal{A}}}
+\newcommand{\B}{\ensuremath{\mathcal{B}}}
+\newcommand{\C}{\ensuremath{\mathcal{C}}}
+\newcommand{\D}{\ensuremath{\mathcal{D}}}
+\newcommand{\E}{\ensuremath{\mathcal{E}}}
+\newcommand{\F}{\ensuremath{\mathcal{F}}}
+\newcommand{\G}{\ensuremath{\mathcal{G}}}
+% 
 \renewcommand{\d}{\mathrm{d}}
 \newcommand{\N}{\ensuremath{\mathcal{N}}}
 \newcommand{\Neff}{\ensuremath{\N_\mathrm{eff}}}
