Tweaked eqn layout.

--- a/numerical/results.tex
+++ b/numerical/results.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % results.tex - Ian Huston
-% $Id: results.tex,v 1.8 2009/10/06 16:27:47 ith Exp $
+% $Id: results.tex,v 1.9 2009/10/06 16:47:54 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.8 2009/10/06 16:27:47 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.9 2009/10/06 16:47:54 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -340,22 +340,22 @@ arise as is indeed the case at first order.
 
 
 Full second order equation in terms of $\N$:
-\begin{align}
+\begin{multline}
  \label{eq:fullso-res}
-\ddN{\dvp2} &+ \left(3 + \frac{\dN{H}}{H}\right) \dN{\dvp2} +
-\left(\frac{k}{aH}\right)^2 \dvp2 \nonumber \\
+\ddN{\dvp2} + \left(3 + \frac{\dN{H}}{H}\right) \dN{\dvp2} +
+\left(\frac{k}{aH}\right)^2 \dvp2 \\
 % 
-&+ \frac{1}{H^2}\left[ \Upp + 8\pi G\left(2\dN{\vp_0}\Uphi + 8\pi G
-\left(\dN{\vp_0}\right)^2 \U \right)\right] \nonumber \\
++ \frac{1}{H^2}\left[ \Upp + 8\pi G\left(2\dN{\vp_0}\Uphi + 8\pi G
+\left(\dN{\vp_0}\right)^2 \U \right)\right] 
 % 
-&+ S_\mathrm{full}(\kvi) = 0\,,
-\end{align}
++ S_\mathrm{full}(\kvi) = 0\,,
+\end{multline}
 % 
 where the full source equation is given by
 % 
 \begin{align}
 \label{eq:fullsrc-res}
-S_\mathrm{full}(\kvi) &= \frac{1}{(2\pi)^2}\int \d q q^2\Bigg\{ 
+S_\mathrm{full}(\kvi) = \frac{1}{(2\pi)^2}\int \d q q^2 &\Bigg\{ 
 % 
 \frac{1}{\left(H\right)^2} \left[ \Uppp + 3(8\pi G)\dN{\vp_0}\Upp\right]
  \dvp1(\qvi) \A(\kvi, \qvi) \nonumber \\
