Changed to using sigma.

--- a/ihmacros.sty
+++ b/ihmacros.sty
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % 
 % ihmacros.sty - Ian Huston
-% $Id: ihmacros.sty,v 1.18 2009/10/06 16:27:47 ith Exp $
+% $Id: ihmacros.sty,v 1.19 2009/10/07 16:03:23 ith Exp $
 % % % % % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihmacros}
@@ -75,7 +75,7 @@
 \newcommand{\msqphisq}{\ensuremath{\frac{1}{2} m^2 \varphi^2}}
 \newcommand{\hybridtwoandfour}{\ensuremath{\msqphisq + \lambdaphifour}}
 \newcommand{\linde}{\ensuremath{-\msqphisq + \lambdaphifour +\frac{m^4}{4\lambda}}}
-\newcommand{\phitwooverthree}{\ensuremath{\lambda\varphi^{\frac{2}{3}}}}
+\newcommand{\phitwooverthree}{\ensuremath{\sigma\varphi^{\frac{2}{3}}}}
 % 
 % 
 \newcommand{\cn}{\mathrm{\mathsf{c}}}
